compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_8.diag.txt
/kt45461_8.kt:12:24: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: Inv<Number>, K (incompatible type arguments: Number, Int)
    Bar<Inv<Number>>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                       ^
